--- a/package.json
+++ b/package.json
@@ -4,40 +4,60 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon -r ts-node ./src/server.ts",
-    "typeorm:generate": "node_modules/.bin/ts-node node_modules/typeorm/cli.js migration:generate -n",
-    "typeorm:create": "node_modules/.bin/ts-node node_modules/typeorm/cli.js migration:create -n",
-    "migrate": "node_modules/.bin/ts-node node_modules/typeorm/cli.js migration:run"
+    "start": "nodemon -r ts-node server.ts",
+    "add-migration": "node_modules/.bin/ts-node node_modules/typeorm/cli.js migration:generate -n",
+    "migrations": "node_modules/.bin/ts-node node_modules/typeorm/cli.js migration:run",
+    "drop": "node_modules/.bin/ts-node node_modules/typeorm/cli.js schema:drop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/body-parser": "^1.19.0",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.6.2",
-    "@types/passport": "^1.0.4",
-    "@types/passport-jwt": "^3.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.8.1",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "pg": "^8.3.3",
+    "passport-local": "^1.0.0",
+    "pg": "^8.4.1",
     "ts-node": "^9.0.0",
-    "typeorm": "^0.2.25",
-    "typescript": "^4.0.2"
+    "typeorm": "^0.2.28"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/node": "^14.11.8",
+    "@types/passport": "^1.0.4",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
+    "prettier": "^2.1.2",
+    "typescript": "^4.0.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.(js|ts|md)": [
+      "eslint --cache --fix",
+      "prettier --write"
+    ]
   }
 }
