--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "add-seed": "ts-node node_modules/typeorm/cli.js migration:create -d src/data/seeders -n",
         "seed": "ts-node node_modules/typeorm/cli.js migration:run",
         "drop": "ts-node node_modules/typeorm/cli.js schema:drop",
-        "lint": "eslint . --ext .ts"
+        "orm": "ts-node node_modules/typeorm/cli.js"
     },
     "keywords": [],
     "author": "",
