--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "add-migration": "ts-node node_modules/typeorm/cli.js migration:generate -n",
         "migrations": "ts-node node_modules/typeorm/cli.js migration:run",
         "drop": "ts-node node_modules/typeorm/cli.js schema:drop",
-        "orm": "ts-node node_modules/typeorm/cli.js"
+        "orm": "ts-node node_modules/typeorm/cli.js",
+        "tests": "mocha ./__test__/specs/**/*.spec.ts --require ts-node/register --timeout 10000"
     },
     "keywords": [],
     "author": "",
@@ -15,12 +16,14 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "chai": "^4.2.0",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.12.2",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "mocha": "^8.2.0",
         "nodemon": "^2.0.5",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
@@ -33,9 +36,11 @@
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.0",
+        "@types/chai": "^4.2.14",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.8",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/mocha": "^8.0.3",
         "@types/node": "^14.11.8",
         "@types/passport": "^1.0.4",
         "@types/passport-jwt": "^3.0.3",
