--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,36 @@
 {
-	"compilerOptions": {
-		"declaration": true,
-		"target": "ES2020",
-		"module": "commonjs",
-		"sourceMap": true,
-		"outDir": "./dist",
-		"importHelpers": true,
-		"strict": true,
-		"noImplicitAny": true,
-		"strictNullChecks": false,
-		"noImplicitThis": true,
-		"alwaysStrict": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": false,
-		"noImplicitReturns": true,
-		"noFallthroughCasesInSwitch": true,
-		"moduleResolution": "node",
-		"allowSyntheticDefaultImports": true,
-		"experimentalDecorators": true,
-		"emitDecoratorMetadata": true,
-		"resolveJsonModule": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"types": [
-			"node"
-		],
-		"lib": [
-			"es2020"
-		],
-		"typeRoots": [
-			"./node_modules/@types"
-		]
-	}
+    "compilerOptions": {
+        "declaration": true,
+        "target": "ES2020",
+        "module": "commonjs",
+        "sourceMap": true,
+        "outDir": "./dist",
+        "importHelpers": true,
+        "strict": true,
+        "noImplicitAny": true,
+        "strictNullChecks": false,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": false,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "types": [
+            "node",
+            "mocha"
+        ],
+        "lib": [
+            "es2020"
+        ],
+        "typeRoots": [
+            "./node_modules/@types"
+        ]
+    }
 }
