--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ POSTGRES_PASSWORD=postgres
 
 # TYPEORM
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=http://host.docker.internal
+TYPEORM_HOST=172.18.0.2
 TYPEORM_PORT=5432
 TYPEORM_DATABASE=test
 TYPEORM_USERNAME=postgres
