--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ POSTGRES_PASSWORD=postgres
 
 # TYPEORM
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=pg
-TYPEORM_PORT=5432
+TYPEORM_HOST=localhost
+TYPEORM_PORT=5423
 TYPEORM_DATABASE=test
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
