--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ POSTGRES_PASSWORD=postgres
 
 # TYPEORM
 TYPEORM_CONNECTION=postgres
-TYPEORM_HOST=postgres
+TYPEORM_HOST=host.docker.internal
 TYPEORM_PORT=5423
 TYPEORM_DATABASE=test
 TYPEORM_USERNAME=postgres
