--- a/.eslintrc
+++ b/.eslintrc
@@ -42,7 +42,7 @@
         "no-shadow": "off",
         // warnings
         "prefer-const": "error",
-        "@typescript-eslint/ban-types": "error",
+        "@typescript-eslint/ban-types": "off",
         "@typescript-eslint/no-this-alias": "error",
         "@typescript-eslint/no-extra-non-null-assertion": "error",
         "@typescript-eslint/no-non-null-assertion": "error",
