--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "pg": "^8.4.1",
         "pm2": "^4.5.0",
         "reflect-metadata": "^0.1.13",
+        "supertest": "^5.0.0",
         "ts-node": "^9.0.0",
         "typeorm": "^0.2.28"
     },
@@ -48,6 +49,7 @@
         "@types/passport": "^1.0.4",
         "@types/passport-jwt": "^3.0.3",
         "@types/passport-local": "^1.0.33",
+        "@types/supertest": "^2.0.10",
         "@typescript-eslint/eslint-plugin": "^4.4.1",
         "@typescript-eslint/parser": "^4.4.1",
         "eslint": "^7.11.0",
