--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ TYPEORM_ENTITIES=src/entity/**/*.ts
 TYPEORM_MIGRATIONS=src/data/seeders/**/*.ts,src/data/migration/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/data/migration
 TYPEORM_ENTITIES_DIR=src/entity
+
+ENVIRONMENT=DEV
  
 # JWT
 JWT_SECRET=mysecret123
