--- a/.env
+++ b/.env
@@ -23,6 +23,7 @@ TYPEORM_MIGRATIONS=src/data/seeders/**/*.ts,src/data/migration/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/data/migration
 TYPEORM_ENTITIES_DIR=src/entity
 
- 
+ENV=DEV
+
 # JWT
 JWT_SECRET=mysecret123
