--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "server": "ENV=TEST nodemon -r ts-node server.ts",
+        "server": "nodemon -r ts-node server.ts",
         "add-migration": "ts-node node_modules/typeorm/cli.js migration:generate -n",
         "migrations": "ts-node node_modules/typeorm/cli.js migration:run",
         "drop": "ts-node node_modules/typeorm/cli.js schema:drop",
         "orm": "ts-node node_modules/typeorm/cli.js",
         "tests": "mocha ./__test__/specs/**/*.spec.ts --require ts-node/register --timeout 10000",
-        "pm": "pm2 install typescript",
-        "prod": "ENV=TEST pm2 start server.ts --watch",
-        "q": "npm run server && npm run tests"
+        "wait": "wait-on http-get://localhost:3001 && npm run tests",
+        "prod": "pm2 install typescript && pm2 ts-node start server.ts",
+        "all": "concurrently 'npm:prod' 'npm:wait'"
     },
     "keywords": [],
     "author": "",
@@ -22,9 +22,11 @@
         "chai": "^4.2.0",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.12.2",
+        "concurrently": "^5.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "faker": "^5.1.0",
         "jsonwebtoken": "^8.5.1",
         "mocha": "^8.2.0",
         "nodemon": "^2.0.5",
@@ -36,7 +38,8 @@
         "reflect-metadata": "^0.1.13",
         "supertest": "^5.0.0",
         "ts-node": "^9.0.0",
-        "typeorm": "^0.2.28"
+        "typeorm": "^0.2.28",
+        "wait-on": "^5.2.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -44,6 +47,7 @@
         "@types/chai": "^4.2.14",
         "@types/cors": "^2.8.8",
         "@types/express": "^4.17.8",
+        "@types/faker": "^5.1.3",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mocha": "^8.0.3",
         "@types/node": "^14.11.8",
