--- a/.env
+++ b/.env
@@ -22,6 +22,7 @@ TYPEORM_ENTITIES=src/entity/**/*.ts
 TYPEORM_MIGRATIONS=src/data/seeders/**/*.ts,src/data/migration/**/*.ts
 TYPEORM_MIGRATIONS_DIR=src/data/migration
 TYPEORM_ENTITIES_DIR=src/entity
+DoCKER_HOST=host.docker.internal
 
 ENV=DEV
 
