--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,11 @@
 {
-	"semi": true,
-	"trailingComma": "all",
-	"singleQuote": true,
-	"printWidth": 120,
 	"tabWidth": 4,
-	"useTabs": true
+	"bracketSpacing": true,
+	"printWidth": 120,
+	"singleQuote": true,
+	"trailingComma": "none",
+	"useTabs": true,
+	"semi": true,
+	"arrowParens": "avoid",
+	"endOfLine": "auto"
 }
