--- a/.env.example
+++ b/.env.example
@@ -12,16 +12,16 @@ POSTGRES_PASSWORD=postgres
 # TYPEORM
 TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=localhost
-TYPEORM_PORT=5423
-TYPEORM_DATABASE=test
+TYPEORM_PORT=5432
+TYPEORM_DATABASE=pet_db
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
-#TYPEORM_SYNCHRONIZE=true
+TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=true
-TYPEORM_ENTITIES=src/entity/**/*.ts
-TYPEORM_MIGRATIONS=src/data/seeders/**/*.ts,src/data/migration/**/*.ts
-TYPEORM_MIGRATIONS_DIR=src/data/migration
-TYPEORM_ENTITIES_DIR=src/entity
- 
+TYPEORM_ENTITIES=src/data/entities/**/*.ts
+TYPEORM_MIGRATIONS=src/data/migration/**/*.ts
+#TYPEORM_MIGRATIONS_DIR=src/data/migration
+#TYPEORM_ENTITIES_DIR=src/entities
+
 # JWT
-JWT_SECRET=mysecret123
+SECRET=mysecret123
