--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=true
 TYPEORM_ENTITIES=src/data/entities/**/*.ts
 TYPEORM_MIGRATIONS=src/data/migration/**/*.ts
-#TYPEORM_MIGRATIONS_DIR=src/data/migration
-#TYPEORM_ENTITIES_DIR=src/entities
+TYPEORM_MIGRATIONS_DIR=src/data/migration
+TYPEORM_ENTITIES_DIR=src/entities
 
 # JWT
 SECRET=mysecret123
