--- a/.eslintrc
+++ b/.eslintrc
@@ -44,7 +44,8 @@
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/no-var-requires": "off",
-		"@typescript-eslint/no-explicit-any": "off"
+		"@typescript-eslint/no-explicit-any": "off",
+		"class-methods-use-this": "off"
 	},
 	"settings": {
 		"import/resolver": {
