--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
 		"esModuleInterop": true,
 		"types": ["node", "mocha"],
 		"lib": ["es2020"],
-		"typeRoots": ["./node_modules/@types", "index.d.ts"]
+		"typeRoots": ["./node_modules/@types", "types/custom.d.ts"]
 	}
 }
