--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,7 @@ jobs:
       - checkout
       - run:
           name: createDB
-          command: | 
-            docker run -d --name pg -p 5422:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_USER=postgres -e POSTGRES_DB=pet_db
-            docker ps
+          command: docker run -d --name pg -p 5422:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_USER=postgres -e POSTGRES_DB=pet_db
       - run:
           name: install deps
           command: npm install
