--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,14 +4,18 @@ jobs:
     docker:
       - image: cimg/node:14.15.5
       - image: circleci/postgres:12.1
+        environment:
+          POSTGRES_USER: postgres 
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: pet_db
     steps:
       - checkout
       - run:
-          name: createDB
-          command: docker run -d --name pg -p 5422:5432 -e POSTGRES_PASSWORD=postgres -e POSTGRES_USER=postgres -e POSTGRES_DB=pet_db
-      - run:
           name: install deps
           command: npm install
+      - run:
+          name: run migrations
+          command: npm run migrations
       - run:
           name: run tests
           command: npm run test
