--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 		"esModuleInterop": true,
 		"types": ["node", "mocha"],
 		"lib": ["es2020"],
-		"typeRoots": ["./node_modules/@types", "types/request.d.ts"]
+		"typeRoots": ["./node_modules/@types", "types/express.d.ts"]
 	},
-	"include": ["src/**/*.*", "__test__/**/*.*"]
+	"exclude": ["__test__"]
 }
