--- a/.eslintrc
+++ b/.eslintrc
@@ -37,12 +37,13 @@
 		"no-await-in-loop": "off",
 		"strict": "off",
 		"import/prefer-default-export": "off",
-		"@typescript-eslint/no-unused-vars": ["warn", { "args": "after-used", "argsIgnorePattern": "^_" }],
+		"@typescript-eslint/no-unused-vars": "off",
 		"@typescript-eslint/explicit-module-boundary-types": "off",
 		"@typescript-eslint/explicit-function-return-type": "off",
 		"@typescript-eslint/no-var-requires": "off",
 		"@typescript-eslint/no-explicit-any": "off",
-		"class-methods-use-this": "off"
+		"class-methods-use-this": "off",
+		"@typescript-eslint/ban-ts-comment": "off"
 	},
 	"settings": {
 		"import/resolver": {
