--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strictNullChecks": false,
 		"noImplicitThis": true,
 		"alwaysStrict": true,
-		"noUnusedLocals": true,
+		"noUnusedLocals": false,
 		"noUnusedParameters": false,
 		"noImplicitReturns": true,
 		"noFallthroughCasesInSwitch": true,
@@ -25,5 +25,6 @@
 		"lib": ["es2020"],
 		"typeRoots": ["./node_modules/@types", "types/express.d.ts"]
 	},
-	"exclude": ["__test__"]
+	"include": ["src"],
+	"exclude": ["__test__", "node_modules"]
 }
