--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,9 @@
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"types": ["node", "mocha"],
-		"lib": ["es2020"],
-		"typeRoots": ["./node_modules/@types", "types/express.d.ts"]
+		"lib": ["es2020"]
 	},
+	"files": ["./types/express.d.ts"],
 	"include": ["src"],
 	"exclude": ["__test__", "node_modules"]
 }
