added: tags entitry; relation between posts and tags; routes for tags

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # APPLICATION
 APP_PORT=3001
 
-NODE_ENV=dev
+NODE_ENV=development
 
 # DATABASE
 POSTGRES_USER=postgres
@@ -16,7 +16,7 @@ TYPEORM_PORT=5432
 TYPEORM_DATABASE=pet_db
 TYPEORM_USERNAME=postgres
 TYPEORM_PASSWORD=postgres
-TYPEORM_SYNCHRONIZE=false
+TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=true
 TYPEORM_ENTITIES=src/data/entities/**/*.ts
 TYPEORM_MIGRATIONS=src/data/migration/**/*.ts
