--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "chai": "^4.2.0",
+        "chance": "^1.1.7",
         "class-transformer": "^0.3.1",
         "class-validator": "^0.12.2",
         "concurrently": "^5.3.0",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "got": "^11.8.2",
         "jsonwebtoken": "^8.5.1",
         "mocha": "^8.2.0",
         "nodemon": "^2.0.5",
@@ -31,11 +33,10 @@
         "pg": "^8.4.1",
         "pm2": "^4.5.0",
         "reflect-metadata": "^0.1.13",
-        "supertest": "^5.0.0",
         "ts-node": "^9.0.0",
         "typeorm": "^0.2.28",
-        "wait-on": "^5.2.0",
-        "chance": "^1.1.7"
+        "typescript": "^4.2.3",
+        "wait-on": "^5.2.0"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
@@ -51,6 +52,7 @@
         "@types/passport-jwt": "^3.0.3",
         "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.10",
+        "@types/tough-cookie": "^4.0.0",
         "@typescript-eslint/eslint-plugin": "^4.4.1",
         "@typescript-eslint/parser": "^4.4.1",
         "eslint": "^7.11.0",
@@ -61,7 +63,7 @@
         "husky": "^4.3.0",
         "lint-staged": "^10.4.0",
         "prettier": "^2.1.2",
-        "typescript": "^4.0.3"
+        "tough-cookie": "^4.0.0"
     },
     "husky": {
         "hooks": {
